# xmpp

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  configure  configure.ac  rebar.config  rebar.config.script  vars.config.in  xmpp.doap
.github/: PULL_REQUEST_TEMPLATE
c_src/: Makefile  jid.c  jid.rl  lang.abnf  lang.rl  uri.abnf  uri.rl  utf8.abnf  utf8.rl  xmpp_lang.c  xmpp_lang.rl  xmpp_uri.c  xmpp_uri.rl
doc/: API.md
include/: captcha_form.hrl  flex_offline.hrl  http_upload.hrl  jid.hrl  mam_query.hrl  muc_register.hrl  muc_request.hrl  muc_roomconfig.hrl  muc_roominfo.hrl  ns.hrl  pubsub_get_pending.hrl  pubsub_meta_data.hrl  pubsub_node_config.hrl  pubsub_publish_options.hrl  pubsub_subscribe_authorization.hrl  pubsub_subscribe_options.hrl  push_summary.hrl  scram.hrl  xmpp.hrl  xmpp_codec.hrl
specs/: captcha_form.cfg  captcha_form.xdata  http_upload.cfg  http_upload.xdata  mam_query.xdata  muc_roomconfig.cfg  muc_roomconfig.xdata  muc_roominfo.cfg  muc_roominfo.xdata  pubsub_meta_data.cfg  pubsub_meta_data.xdata  pubsub_node_config.cfg  pubsub_node_config.xdata  pubsub_publish_options.xdata  push_summary.cfg  push_summary.xdata  xmpp_codec.spec
src/: captcha_form.erl  flex_offline.erl  http_upload.erl  jid.erl  mam_query.erl  muc_register.erl  muc_request.erl  muc_roomconfig.erl  muc_roominfo.erl  p1_mucsub.erl  p1_stream.erl  phone_number_normalization.erl  pubsub_get_pending.erl  pubsub_meta_data.erl  pubsub_node_config.erl  pubsub_publish_options.erl  pubsub_subscribe_authorization.erl  pubsub_subscribe_options.erl  (+116 more)
(+2 files in other folders)
